--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-matplotlib==3.3.4
+matplotlib==3.3.2
+matplotlib==3.5.2
+matplotlib==3.5.3
+pandas==1.1.3
+pandas==1.4.3
+pandas==2.0.3
+streamlit==1.40.1
